<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Blog">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:fitsSystemWindows="true"
        android:background="?colorAccent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:collapsedTitleGravity="start"
            app:expandedTitleGravity="center_horizontal"
            app:title="@string/app_name"
            app:contentScrim="?attr/colorPrimaryDark"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_delete_black_24dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

       <RelativeLayout
           android:layout_margin="16dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="#f5f5f5">

           <TextView
               android:id="@+id/blogpage_title"
               android:layout_below="@+id/blogpage_category"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/blog_title_placeholder"
               android:layout_marginBottom="4dp"
               android:textAllCaps="false"
               android:textStyle="bold"
               android:textSize="20sp"
               android:textColor="@color/darkFont"/>
           <TextView
               android:id="@+id/blogpage_category"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/blog_category_placeholder"
               android:textAllCaps="true"
               android:textStyle="bold"
               android:layout_marginBottom="4dp"
               android:textSize="20sp"
               android:textColor="@color/colorAccent"/>

           <TextView
               android:id="@+id/blogpage_date"
               android:layout_below="@+id/blogpage_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="12dp"
               android:text="@string/date_placeholder"
               android:textSize="12sp"
               android:textColor="@color/greyFont"
               />




           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/blogpage_date"
               android:text="@string/blog_content_placeholder"
               android:textSize="16sp"
               android:textColor="@color/greyFont"

                />






       </RelativeLayout>






    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>