<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="blogpost"
            type="com.example.ink.data.blogpost.Blogpost" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout

    android:background="@drawable/card_bg"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/blog_image"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:contentDescription="blogpost image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/blogpost_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_travel" />

    <TextView
        android:id="@+id/blogpost_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/category"
        android:text="@{blogpost.category}"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/blogpost_title"
        app:layout_constraintEnd_toEndOf="@+id/blogpost_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/blogpost_title"
        app:layout_constraintTop_toTopOf="@+id/blog_image" />

    <TextView
        android:id="@+id/blogpost_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAllCaps="false"
        android:textColor="@color/darkFont"
        android:textSize="20sp"
        android:text="@{blogpost.title}"
        app:layout_constraintBottom_toTopOf="@+id/blogpost_date"
        app:layout_constraintStart_toEndOf="@+id/blog_image"
        app:layout_constraintTop_toBottomOf="@+id/blogpost_category"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/blogpost_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/article_date"
        android:text="@{blogpost.date}"
        android:textSize="12sp"
        android:textColor="@color/greyFont"
        app:layout_constraintBottom_toBottomOf="@+id/blog_image"
        app:layout_constraintEnd_toEndOf="@+id/blogpost_title"
        app:layout_constraintStart_toStartOf="@+id/blogpost_title"
        app:layout_constraintTop_toBottomOf="@+id/blogpost_title" />

    <ImageView
        android:id="@+id/count_image"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="124dp"
        app:layout_constraintBottom_toBottomOf="@+id/blogpost_date"
        app:layout_constraintStart_toEndOf="@+id/blogpost_date"
        app:layout_constraintTop_toTopOf="@+id/blogpost_date"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_thumbup" />

    <TextView
        android:id="@+id/view_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/greyFont"
        android:textSize="12sp"
        android:text="@{blogpost.viewCount}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/count_image"
        app:layout_constraintTop_toTopOf="@+id/count_image"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/view_count" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toEndOf="@+id/blogpost_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_share_black_24dp" />

    <ImageView
        android:id="@+id/delete_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="delete button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete_black_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>